<resources>
    <string name="app_name">Help the world</string>
    <string name="error_need_play_services">Do you need Google Play Services to use the app.</string>
    <string name="error_no_internet">Network not available. Connect and try again.</string>
    <string name="write_email">Escribe tu correo</string>
    <string name="no_valid_email">Correo no válido</string>
    <string name="write_password">Escribe tu contraseña</string>
    <string name="write_name">Escribe tu nombre</string>

    <!-- Drawer -->
    <string name="action_register">Register</string>
    <string name="action_points">Points</string>
    <string name="action_badges">Badges</string>
    <string name="action_ranking">Ranking</string>
    <string name="action_logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Buttons -->
    <string name="action_login">Log In</string>

    <!-- Main -->
    <!-- Main Unregistered Texts -->
    <string name="main_unregister_text">¡Challenge your self to help the world!</string>

    <!-- Main Buttons descriptions -->
    <string name="dogs_button_description">Walk dogs</string>
    <string name="water_button_description">Save water</string>
    <string name="recycle_button_description">Recycle</string>

    <!-- Login -->
    <!-- Login Texts -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in_ime">Login</string>
    <string name="action_sign_in">Login</string>
    <string name="no_account_create">No account yet? Create one.</string>

    <!-- Register -->
    <!-- Register Tet -->
    <string name="hint_name">Name</string>
    <string name="action_sign_up_ime">Signup</string>
    <string name="action_sign_up">Register</string>
    <string name="already_member">Already a member? Login</string>

    <!-- Recycle -->
    <!-- Types -->
    <string-array name="recycle_titles">
        <item>Organic</item>
        <item>Inorganic</item>
        <item>Paper</item>
    </string-array>

    <string-array name="recycle_description">
        <item>Products apply this category: Food, fruits, vegetables and flowers.</item>
        <item>Products apply this category: Plastic, metal and glass.</item>
        <item>Products apply this category: Paper, books, news paper, boxes and paperboard.</item>
    </string-array>

    <string name="demo_points">1200 points</string>
    <string name="demo_g_badges">2 Badges</string>
    <string name="demo_s_badges">4 Badges</string>
    <string name="demo_b_badges">6 Badges</string>

</resources>
