<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:background="@drawable/round_button_green"
                android:contentDescription="@string/recycle_button_description"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/button_recycle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:background="@drawable/round_button_purple"
                android:contentDescription="@string/dogs_button_description"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/button_dogs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:background="@drawable/round_button_blue"
                android:contentDescription="@string/water_button_description"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/button_water" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">
            <Button
                android:text="@string/action_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_marginRight="@dimen/normal_margin"
                android:paddingBottom="@dimen/normal_margin"
                android:paddingTop="@dimen/normal_margin"
                android:paddingStart="@dimen/large_margin"
                android:paddingEnd="@dimen/large_margin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/button_register" />

        <Button
            android:text="@string/action_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginLeft="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginRight="@dimen/normal_margin"
            android:paddingBottom="@dimen/normal_margin"
            android:paddingTop="@dimen/normal_margin"
            android:paddingStart="@dimen/large_margin"
            android:paddingEnd="@dimen/large_margin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_log_in" />
    </LinearLayout>

    <TextView
        android:text="@string/main_unregister_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="@dimen/large_margin"
        android:gravity="center"
        android:id="@+id/textView" />

</RelativeLayout>