<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/hombre"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/oro" />

                <TextView
                    android:text="2 Medallas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="6dp"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:id="@+id/gold_badge"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/plata"
                    android:id="@+id/imageView2" />

                <TextView
                    android:text="3 Medallas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="6dp"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:id="@+id/silver_badge"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/bronce"/>

                <TextView
                    android:text="8 Medallas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="6dp"
                    android:textSize="18sp"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:background="@drawable/round_button_green"
                android:contentDescription="@string/recycle_button_description"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/button_recycle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:background="@drawable/round_button_purple"
                android:contentDescription="@string/dogs_button_description"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/button_dogs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/button_padding"
                android:background="@drawable/round_button_blue"
                android:contentDescription="@string/water_button_description"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/button_water" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>